Fix path to icons.

--- a/source/room_stats/templates/room_stats/room_details.html
+++ b/source/room_stats/templates/room_stats/room_details.html
@@ -59,7 +59,7 @@
           Promote
         </a>
       {% elif promotion_reason %}
-        <span class="promo-status noselect" title="promotion status"><img src={% static 'img/icon-promotion.png' %}/>
+        <span class="promo-status noselect" title="promotion status"><img src="{% static 'img/icon-promotion.png' %}"/>
           {{ promotion_reason }}
         </span>
       {% else %}
