--- a/source/room_stats/templates/room_stats/about.html
+++ b/source/room_stats/templates/room_stats/about.html
@@ -13,18 +13,16 @@
 
          Depending on the room size, it would be placed to either small (5-50) or medium (50-500) catalog. We promote small rooms for 7 days and medium for 14 days. You can refresh the promotion any time after the expiration.
     -->
-    <h2>Some quick notes:</h2>
+
+    <h2>Roadmap for 1.1.0:</h2>
     <ul>
-      <li>The huge amount of rooms is not categorized yet, interface for category changes/proposals will come soon</li>
-      <li style="text-decoration: line-through;">Mobile interface is broken right now, should be fixed in the later releases</li>
-      <li style="text-decoration: line-through;">Room list items are too big right now. I'm searching a way to greatly reduce them.</li>
-      <li>Community room promotions would be free ofc.</li>
-      <li>Ratings page should be redesigned later.</li>
-      <li>Room members graph is showing only last month statistics right now. It should be improved.</li>
+      <li>Add different homeservers to catalog</li>
+      <li>Add crawler to explore homeservers and rooms</li>
+      <li>Add additional statistics (room activity, unique senders)</li>
     </ul>
 
     <h2>Related projects</h2>
-    This section is under development. Please, feel free to add your project there.
+    A lot of interesting matrix projects can be found in <a href="https://riot.im/app/#/group/+community:matrix.org">+community:matrix.org</a> and <a href="https://riot.im/app/#/group/+matrix-community:kamax.io">+matrix-community:kamax.io</a> groups.
 
     <h2>Contacts</h2>
     If you want to share some thoughts or ideas, please, consider the following contacts:
