Fix bot response. Small fixes to bot-related pages.

--- a/source/room_stats/templates/room_stats/homeservers.html
+++ b/source/room_stats/templates/room_stats/homeservers.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-  The page is under development. However, there are some info:
+  The page is under development. There are some raw info though:
 
   <div class="homeserver_list">
     {% for server in servers %}
@@ -24,7 +24,7 @@
     {% endfor %}
   </div>
 
-  <br>status legend:  (<b>a</b>ssumed/<b>c</b>onfirmed/<b>n</b>ot_exist/registration_<b>d</b>isabled/<b>r</b>egistered/<b>u</b>nknown)
+  <br>status legend:  (<b>a</b>ssumed/<b>c</b>onfirmed/<b>r</b>egistered/<b>n</b>ot_exist/registration_<b>d</b>isabled/<b>u</b>nknown)
 
 
 
