Edit help pages.

--- a/source/room_stats/templates/room_stats/about.html
+++ b/source/room_stats/templates/room_stats/about.html
@@ -21,6 +21,9 @@
       <li>Add additional statistics (room activity, unique senders)</li>
     </ul>
 
+    <h2>Bot</h2>
+    We use a <a href="/bot/">bot</a> to collect some information about the rooms. It covers a small subset of <a href="/homeservers/">servers</a> currently, but it would be expanded.
+
     <h2>Related projects</h2>
     A lot of interesting matrix projects can be found in <a href="https://riot.im/app/#/group/+community:matrix.org">+community:matrix.org</a> and <a href="https://riot.im/app/#/group/+matrix-community:kamax.io">+matrix-community:kamax.io</a> groups.
 
