--- a/source/room_stats/templates/room_stats/homeservers.html
+++ b/source/room_stats/templates/room_stats/homeservers.html
@@ -5,7 +5,8 @@
 {% endblock %}
 
 {% block content %}
-  The page is under development. There are some raw info though:
+  <h1>Matrix Homeservers</h1>
+  The page is under development. There are some raw info:
 
   <div class="homeserver_list">
     {% for server in servers %}
@@ -25,6 +26,7 @@
   </div>
 
   <br>status legend:  (<b>a</b>ssumed/<b>c</b>onfirmed/<b>r</b>egistered/<b>n</b>ot_exist/registration_<b>d</b>isabled/<b>u</b>nknown)
+  <br>timezone: UTC
 
 
 
