--- a/source/room_stats/templates/room_stats/bot.html
+++ b/source/room_stats/templates/room_stats/bot.html
@@ -10,7 +10,7 @@
     Yes. I'm matrixstats bot. My destiny is to explore new homeservers and rooms. When I find a new homeserver, I register on it and join rooms. Then I obtain statistical data and push it to catalog.
 
     <h3>Statistical data?</h3>
-    The number of active users and messages per room. We need this information to highlight active rooms in matrixstats, so users can found the active rooms more easily. There are no such information in the official API, so we collect it in such way.
+    For joined rooms, we obtain number of active users and messages per room. We use this information to highlight active rooms in matrixstats, so users can found active rooms more easily. There are no such information in the official API, so it collected this way.
 
     <h3>Is it safe?</h3>
     Depends. The public rooms are opened to the world by default, so the information may leak in many ways. The bot is just a member, neither more nor less. It can do anything your members does. If you suspect your members, consider suspecting the bot too. If you trust your members, the bot should be fine.
@@ -19,6 +19,6 @@
     We need to accumulate events ids and mxids for counting and deduplicating events. This information is stored up for a month and then flushed. We don't collect anything expect event ids and mxids.
 
     <h3>Anything else?</h3>
-    The bot is currently in the early alpha stage. While we want to spread it to the whole network instantly, it cannot be done one day.<br> You can get some homeserver info <a href="/homeservers/">here</a>. The information about room statistics would be added to the interface soon.
+    The bot is currently in the early alpha stage. While we want to spread it to the whole network, it cannot be done one day.<br> You can get some homeserver info <a href="/homeservers/">here</a>. The information about room statistics would be added to the interface soon.
 
 {% endblock %}
