--- a/source/room_stats/templates/room_stats/base.html
+++ b/source/room_stats/templates/room_stats/base.html
@@ -13,6 +13,7 @@
     <meta name="description" content="Matrix rooms and their detailed statistics">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="stylesheet" href='{% static "vendor/fa/css/fontawesome-all.min.css" %}'>
     <link rel="stylesheet" href='{% static "css/main.css" %}'>
 
     <script src="{% static 'vendor/jquery-3.3.1.min.js' %}"></script>
