--- a/source/room_stats/static/css/main.css
+++ b/source/room_stats/static/css/main.css
@@ -568,7 +568,7 @@ nav a:hover {
   margin-right: 4px;
   border-radius: 5px;
   font-size: 12px;
-  border: 1px #ccc solid;
+  border: 1px #aaa solid;
 
   display: flex;
   align-items: center;
