--- a/source/room_stats/templates/room_stats/room_details.html
+++ b/source/room_stats/templates/room_stats/room_details.html
@@ -8,6 +8,7 @@
   <script src='{% static "vendor/d3.v4.min.js" %}'></script>
   <script src='{% static "vendor/dimple.v2.3.0.min.js" %}'></script>
   <script src='{% static "vendor/toastr.min.js" %}'></script>
+  <script src='{% static "js/charts.js" %}'></script>
   <link rel="stylesheet" href="{% static 'vendor/toastr.min.css' %}">
 
   {% if admin %}
@@ -112,8 +113,11 @@
     </div>
   {% endif %}
 
-  <div class="room-graph" data-room-id="{{ room.id }}">
-  </div>
+  <br>
+  <div class="room-graph" data-room-id="{{ room.id }}" style="display: inline-block; width: 49%;"></div>
+  <div class="room-stats-graph-d" data-room-id="{{ room.id }}" style="display: inline-block; width: 49%;"></div>
+  <div class="room-stats-graph-w" data-room-id="{{ room.id }}" style="display: inline-block; width: 49%;"></div>
+  <div class="room-stats-graph-m" data-room-id="{{ room.id }}" style="display: inline-block; width: 49%;"></div>
 
   {% include 'room_stats/widgets/modal_promote_room.html' %}
 
