Adjust chart code.

--- a/source/room_stats/static/css/main.css
+++ b/source/room_stats/static/css/main.css
@@ -595,6 +595,15 @@ nav a:hover {
 
 }
 
+.room-graphs {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.room-graphs > * {
+  flex: 1 1 500px;
+}
+
 /*
  *
  * Tags
