Add community projects info. Closes #14.

--- a/source/room_stats/templates/room_stats/about.html
+++ b/source/room_stats/templates/room_stats/about.html
@@ -25,7 +25,7 @@
     We use a <a href="/bot/">bot</a> to collect some information about the rooms. It covers a small subset of <a href="/homeservers/">servers</a> currently, but it would be expanded.
 
     <h2>Related projects</h2>
-    A lot of interesting matrix projects can be found in <a href="https://riot.im/app/#/group/+community:matrix.org">+community:matrix.org</a> and <a href="https://riot.im/app/#/group/+matrix-community:kamax.io">+matrix-community:kamax.io</a> groups.
+    A lot of interesting matrix projects can be found in <a href="https://riot.im/app/#/group/+community:matrix.org">+community:matrix.org</a> and <a href="https://riot.im/app/#/group/+matrix-community:kamax.io">+matrix-community:kamax.io</a> groups. <a href="https://matrix.org/docs/projects/try-matrix-now.html">Try Matrix Now</a> page is also available.
 
     <h2>Contacts</h2>
     If you want to share some thoughts or ideas, please, consider the following contacts:
