--- a/source/room_stats/templates/room_stats/bot.html
+++ b/source/room_stats/templates/room_stats/bot.html
@@ -7,18 +7,19 @@
 
 {% block content %}
     <h3>So you are a bot?</h3>
-    Yes. I'm matrixstats bot. My destiny is to explore new homeservers and rooms. When I find a new homeserver, I register on it and join rooms. Then I obtain statistical data and push it to catalog.
+    Yes. I'm matrixstats bot. My destiny is to explore new homeservers and rooms. When I find a new homeserver, I register on it and join the rooms. Then I obtain statistical data and push it to catalog.
 
     <h3>Statistical data?</h3>
-    For joined rooms, we obtain number of active users and messages per room. We use this information to highlight active rooms in matrixstats, so users can found active rooms more easily. There are no such information in the official API, so it collected this way.
+    For joined rooms, we collect number of active users and messages. This information is used to highlight active rooms, so users can found it more easily. There is no such information presented in the official API.
 
     <h3>Is it safe?</h3>
-    Depends. The public rooms are opened to the world by default, so the information may leak in many ways. The bot is just a member, neither more nor less. It can do anything your members does. If you suspect your members, consider suspecting the bot too. If you trust your members, the bot should be fine.
+    Depends. The public rooms are opened to the world by default, so the information may leak in many ways. The bot is just a member, neither more nor less. It can do anything your members does. So it's up to you to decide can it be safe or not.
 
-    <h3>What information are collected?</h3>
-    We need to accumulate events ids and mxids for counting and deduplicating events. This information is stored up for a month and then flushed. We don't collect anything expect event ids and mxids.
+    <h3>What information is collected?</h3>
+    We need to accumulate events ids and mxids for counting and deduplicating events. This information is stored up for a month and then collapsed into the single numbers. We don't collect anything expect event ids and mxids.
 
     <h3>Anything else?</h3>
-    The bot is currently in the early alpha stage. While we want to spread it to the whole network, it cannot be done one day.<br> You can get some homeserver info <a href="/homeservers/">here</a>. The information about room statistics would be added to the interface soon.
+    The bot is currently in the alpha stage. We expect it to cover the whole network finally.<br>
+    The information about joined homeservers is stored <a href="/homeservers/">here</a>.
 
 {% endblock %}
