Add activity ratings. Closes #31.

--- a/source/room_stats/static/css/main.css
+++ b/source/room_stats/static/css/main.css
@@ -786,6 +786,10 @@ a.tag-cloud:hover {
   color: red;
 }
 
+.neutral {
+  color: #444;
+}
+
 .noselect {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
