Add default sorting by homeserver rooms.

--- a/source/room_stats/templates/room_stats/homeservers.html
+++ b/source/room_stats/templates/room_stats/homeservers.html
@@ -10,7 +10,8 @@
     $(document).ready(function() {
       $('#homeservers').DataTable({
         paging: false,
-        info: false
+        info: false,
+        aaSorting: [[1, 'desc']]
       });
     });
   </script>
