Expand main menu with homeservers. Change /about page.

--- a/source/room_stats/templates/room_stats/about.html
+++ b/source/room_stats/templates/room_stats/about.html
@@ -16,9 +16,9 @@
 
     <h2>Roadmap for 1.1.0:</h2>
     <ul>
-      <li>Add different homeservers to catalog</li>
-      <li>Add crawler to explore homeservers and rooms</li>
-      <li>Add additional statistics (room activity, unique senders)</li>
+      <li><s>Add different homeservers to catalog</s></li>
+      <li><s>Add crawler to explore homeservers and rooms</s></li>
+      <li><s>Add additional statistics (room activity, unique senders)</s></li>
     </ul>
 
     <h2>Bot</h2>
