--- a/source/room_stats/templates/room_stats/widgets/modal_add_homeserver.html
+++ b/source/room_stats/templates/room_stats/widgets/modal_add_homeserver.html
@@ -7,9 +7,9 @@
 
         <span class="caption">You can add a homeserver using this form. Our <a href="/bot/">bot</a> will register on it and will fetch the public rooms periodically.</span>
 
-        <span class="caption">The registration process is automatic, however, in some cases we may need to finish it manualy. Please, don't hesitate to <a href="/about/">contact us</a> in case something goes wrong.</span>
+        <span class="caption">The registration process is automatic, however, in some cases we may need to finish it manualy. Please, don't hesitate to <a href="/about/">contact us</a> in case if something goes wrong.</span>
 
-        <span class="caption">The registration may take up to one hour. The server should be visible in the table in about 2 minutes.</span>
+        <span class="caption">The registration may take up to one hour. Typically it starts at xx:00 each hour. The server should be visible in about 2 minutes after it was added.</span>
 
         <input name="hostname" placeholder="example.com"/>
 
