--- a/source/room_stats/templates/room_stats/homeservers.html
+++ b/source/room_stats/templates/room_stats/homeservers.html
@@ -25,7 +25,7 @@
 {% block content %}
   <h1>Matrix Homeservers</h1>
 
-  This is an unnoficial list of matrix homeservers discovered. If you wish, you can <a class="open-modal" href="#" onclick="open_modal()">add</a> another one. We use this servers to update catalog whenever it's possible.
+  This is an unofficial list of matrix homeservers discovered. If you wish, you can <a class="open-modal" href="#" onclick="open_modal()">add</a> another one. We use this servers to update catalog items whenever it's possible.
 
   <table id="homeservers" class="table" width="100%" style="border-collapse: collapse !important;">
     <thead>
